freshed-rs-macros/tests/ui/fail/component_children_conflict_html_in.stderr
error: children provided both as prop and as child nodes
  --> tests/ui/fail/component_children_conflict_html_in.rs:15:34
   |
15 |     let _ = html_in!(ctx, <Panel children={text}>{"body"}</Panel>);
   |                                  ^^^^^^^^
